--- a/views/admin-customer.html
+++ b/views/admin-customer.html
@@ -117,7 +117,7 @@
                     <input type="button" value="Edit" class="edit-btn">
                     <input type="button" value="Done" class="done-btn">
                     <input type="submit" value="Save" class="save-btn" />
-                    <input type="button" value="Cancle" class="cancle-btn">
+                    <input type="button" value="cancel" class="cancel-btn">
                 </div>
             </form>
         </div>
