--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/header-style.css" />
     <link rel="stylesheet" href="../css/footer-style.css">
     <link rel="stylesheet" href="../css/loading-style.css" />
-    <link rel="stylesheet" href="/css/admin-dashboard.css" />
+    <link rel="stylesheet" href="../css/admin-dashboard.css" />
 
     <!-- fontawesome -->
     <link rel="stylesheet" href="/css/fontawesome/css/all.min.css" />
@@ -43,7 +43,7 @@
                 <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
-            <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
+            <button class="logout" onclick="logout()">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
             <h1 class="dashboard-title">
