--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div class="right-header">
-        <a href="login" class="login-icon">
+        <a href="login" class="login-icon"  onclick="redir()" id="loginIc">
           <i class="fa-regular fa-circle-user login-icon"></i>
         </a>
       </div>
