--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,11 +29,11 @@
         <!-- I need this one to show error message in page -->
         <div class="password-container">
           <i class="fa-solid fa-key"></i>
-          <input type="password" name="password" class="password" placeholder="Password" autocomplete="off" required />
+          <input type="password" name="password" class="password" placeholder="Password" autocomplete="off" required/>
         </div>
         <p class="error" name="errorMsg">the username or password is not correct. please try again</p>
         <!-- I need this one to show error message in page -->
-        <input type="submit" value="Login" class="login-btn" />
+        <input type="submit" value="Login" class="login-btn" onclick="addToLocalStorage()"/>
       </form>
       <p>Doesn't have account ? <a href="signup">Signup</a></p>
     </div>
