--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- connect css file -->
-  <link rel="stylesheet" href="../css/header-style.css" />
-  <link rel="stylesheet" href="../css/footer-style.css">
-  <link rel="stylesheet" href="../css/loading-style.css" />
+  <link rel="stylesheet" href="/css/header-style.css" />
+  <link rel="stylesheet" href="/css/footer-style.css">
+  <link rel="stylesheet" href="/css/loading-style.css" />
   <link rel="stylesheet" href="/css/home-style.css" />
   <link rel="stylesheet" href="/css/footer-style.css">
 
