--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -41,7 +41,7 @@
                 <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> customers</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
-                <li class="products"><a href=""><i class="fa-solid fa-utensils"></i> products</a></li>
+                <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
             </ul>
             <button onclick="logout()" class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
@@ -60,6 +60,13 @@
                     </tr>
                 </thead>
                 <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>2</td>
+                        <td>3</td>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
