--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -39,7 +39,7 @@
                 <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> customers</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
-                <li class="products"><a href=""><i class="fa-solid fa-utensils"></i> products</a></li>
+                <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
