--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -36,11 +36,11 @@
     <div class="product-container">
         <div class="aside">
             <ul>
-                <li class="dashboard"><a href="admin-dashboard.ejs"><i class="fa-solid fa-house"></i> dashboard</a></li>
-                <li class="customers"><a href=""><i class="fa-regular fa-user"></i> customers</a></li>
+                <li class="dashboard"><a href="dashboard"><i class="fa-solid fa-house"></i> dashboard</a></li>
+                <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> customers</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
-                <li class="products"><a href=""><i class="fa-solid fa-utensils"></i> products</a></li>
+                <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
                 <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
@@ -147,7 +147,8 @@
     <div class="new-product-container ">
         <div class="new-product">
 
-            <form class="product-form" action="" method="">
+            <!-- This is needed form to upload products -->
+            <form class="product-form" action="/admin/products" enctype="multipart/form-data" method="post">
                 <h2>Add new product</h2>
                 <div class="name-container input-field-container">
                     <label>name</label>
@@ -161,7 +162,7 @@
                 </div>
                 <div class="price-container input-field-container">
                     <label>price</label>
-                    <input type="number" min="0" value="0" name="product-desc" class="product-desc input-style"
+                    <input type="number" min="0" value="0" name="product-price" class="product-desc input-style"
                         placeholder="Product Name" autocomplete="off" required />
                 </div>
                 <div class="type-container input-field-container">
@@ -170,13 +171,14 @@
                         <option value="hot-drinks" selected>hot drinks</option>
                         <option value="cold-drinks">cold drinks</option>
                         <option value="food">food</option>
-                        <option value="dessert">desssert</option>
+                        <option value="dessert">dessert</option>
                     </select>
                 </div>
                 <div class="image-container input-field-container">
                     <label>image</label>
-                    <input type="file" name="product-name" class="product-name input-style" placeholder="Product Name"
-                        autocomplete="off" required />
+                    <input type="file" name="product-image" class="product-name input-style" placeholder="Product Name"
+                        autocomplete="off" required /> 
+                        
                 </div>
 
                 <div class="buttons">
