--- a/css/admin-profile.css
+++ b/css/admin-profile.css
@@ -221,9 +221,110 @@ body {
     -o-border-radius: var(--border-radius-1);
   }
 }
-.content iframe {
+
+.body {
+  font-family: var(--main-font);
+  font-size: 0.88rem;
+  text-transform: capitalize;
+  transition: 0.3s;
+  background: var(--color-background);
+  user-select: none;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  color: var(--color-dark);
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  font-family: var(--statics-font);
+}
+.user-info h1 {
+  font-size: 40px;
+  margin-bottom: 60px;
+}
+form.user-info {
+  width: fit-content;
+  height: fit-content;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  gap: 20px;
+  pointer-events: none;
+}
+
+.output .part {
   width: 100%;
-  height: 100%;
+  height: 60px;
+  font-size: 30px;
+}
+.output .part input {
+  font-size: 30px;
+  background-color: transparent;
+}
+.output .btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 70%;
+}
+.output .btns input {
+  pointer-events: painted;
+  cursor: pointer;
+  border: 1px solid black;
+  padding: 10px 20px;
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  box-shadow: var(--box-shadow);
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+.output .btns input:hover {
+  background-color: var(--color-dark);
+  color: var(--color-white);
+}
+.output .btns .save-btn,
+.output .btns .cancel-btn {
+  display: none;
+}
+.output .btns .delete-btn {
+  background-color: rgba(255, 0, 0, 0.921);
+  border: none;
+  color: var(--color-white);
+}
+@media (max-width: 600px) {
+  .output {
+    min-width: 340px;
+  }
+  .output .part,
+  .output .part input,
+  .output .btns input {
+    font-size: 18px;
+  }
+}
+.on-edit .part input {
+  border: 1px solid;
+  pointer-events: painted;
+}
+.on-edit .btns .delete-btn,
+.on-edit .btns .edit-btn {
+  display: none;
+}
+.on-edit .btns .save-btn,
+.on-edit .btns .cancel-btn {
+  display: block;
 }
 
 /* end dashboard container section */
