trying to show image

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -41,7 +41,7 @@
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
                 <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
-                <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
             <button class="logout">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
@@ -55,14 +55,12 @@
                 <div class="product-item">
                     <form action="" method="none">
                         <div class="product-id">1</div>
-
                         <div class="product-img part edit-class on-edit" name="product-img">
                             <label for="product-img">product Image :</label>
                             <img src="/images/Daco_1494767.png" alt="">
                             <input type="file" id="choose-file" name="choose-file" accept="image/*">
                             <p class="note">*chose new image if you want change the current
                                 image*</p>
-
                         </div>
                         <div class="part s">
                             <label>product name :</label>
