--- a/views/admin/profile.html
+++ b/views/admin/profile.html
@@ -39,16 +39,15 @@
                 <li class="customers"><a href="customer"><i class="fa-regular fa-user"></i> customers</a></li>
                 <li class="orders"><a href=""><i class="fa-solid fa-scroll"></i> orders</a></li>
                 <li class="messages"><a href=""><i class="fa-regular fa-envelope"></i> messages</a></li>
-                <li class="products"><a href=""><i class="fa-solid fa-utensils"></i> products</a></li>
-                <li class="profile"><a href=""><i class="fa-solid fa-user"></i> your profile</a></li>
+                <li class="products"><a href="products"><i class="fa-solid fa-utensils"></i> products</a></li>
+                <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
             <button class="logout" onclick="logout()">logout <i
                     class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
-            <iframe src="/views/profile.html" frameborder="0"></iframe>
-
+            <iframe src="/views/profile" frameborder="0"></iframe>
         </div>
     </div>
     <!-- end header -->
