--- a/css/admin-profile.css
+++ b/css/admin-profile.css
@@ -255,6 +255,40 @@ form.user-info {
   gap: 20px;
   pointer-events: none;
 }
+form.user-info .change-password {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: painted !important;
+}
+.change-password button {
+  border: 1px solid black;
+  padding: 10px 20px;
+  border-radius: var(--border-radius-3);
+  -webkit-border-radius: var(--border-radius-3);
+  -moz-border-radius: var(--border-radius-3);
+  -ms-border-radius: var(--border-radius-3);
+  -o-border-radius: var(--border-radius-3);
+  transition: 0.3s;
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+.change-password button:hover {
+  background-color: var(--color-dark);
+  color: var(--color-white);
+}
+.change-password button:hover a {
+  color: var(--color-white);
+}
+.change-password a {
+  color: var(--color-dark);
+  font-size: 18px;
+  cursor: pointer;
+}
 
 .output .part {
   width: 100%;
@@ -270,7 +304,7 @@ form.user-info {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 70%;
+  width: 90%;
 }
 .output .btns input {
   pointer-events: painted;
