--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -61,14 +61,24 @@
                     <label for="user-phone">phone :</label>
                     <input type="text" class="phone" name="user-phone" value="06549898494">
                 </div>
+                <div class="password-container part">
+
+                    <label for="old-password">old password</label>
+                    <input type="password" class="old-password" name="old-password">
+                </div>
+                <div class="password-container part">
+                    <label for="new-password">new password</label>
+                    <input type="password" class="new-password" name="new-password">
+                </div>
+
                 <div class="part btns">
                     <input type="button" value="delete account" class="delete-btn">
                     <input type="button" value="edit" class="edit-btn">
                     <input type="submit" value="save" class="save-btn">
                     <input type="button" value="cancel" class="cancel-btn">
                 </div>
-                <div class="change-password part">
-                    <button><a href="#">change your password</a></button>
+                <div class="change-password part ">
+                    <span class="change-pass-btn">change your password</span>
                 </div>
             </form>
         </div>
