finish profile icon

--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -47,11 +47,11 @@
                     class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content body">
-            <form action="none" class="user-info output">
+            <form action="/admin/profile/update" class="user-info output">
                 <h1 class="profile-title">your profile</h1>
                 <div class="name-container part">
                     <label for="user-name">name :</label>
-                    <input type="text" class="name" name="user-name" value="ahmed mohammed">
+                    <input type="text" class="nameField" name="user-name" value="ahmed mohammed">
                 </div>
                 <div class="email-container part">
                     <label for="user-email">email :</label>
