--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
         </ul>
       </div>
       <div class="right-header">
-        <a href="login" class="login-icon"  onclick="redir()" id="loginIc">
+        <a href="login" class="login-icon" onclick="redirect(event)" id="loginIc">
           <i class="fa-regular fa-circle-user login-icon"></i>
         </a>
       </div>
@@ -125,7 +125,7 @@
   <!-- end preloading -->
 
   <!-- connect javascript file -->
-  <script src="/js/home.js"></script>
+  <script type="module" src="/js/home.js"></script>
 </body>
 
 </html>
