--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -25,7 +25,7 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo">YKPO Cafe</span>
+            <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
                 <img class="user-img" src="/images/nigga.jpg" alt="">
@@ -91,6 +91,7 @@
         <div class="three"></div>
     </div>
     <!-- end preloading -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-profile.js"></script>
 </body>
 
