update logo and delete popup window

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -25,7 +25,8 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo">YKPO Cafe</span>
+            <span class="logo"><a href="/home">YKPO Cafe</a>
+            </span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
                 <img class="user-img" src="/images/nigga.jpg" alt="">
@@ -43,7 +44,8 @@
                 <li class="profile"><a href="profile"><i class="fa-solid fa-user"></i> your profile</a></li>
 
             </ul>
-            <button class="logout" onclick="logout()">logout <i class="fa-solid fa-arrow-right-from-bracket"></i></button>
+            <button class="logout" onclick="logout()">logout <i
+                    class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content">
             <h1 class="dashboard-title">
