--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -25,7 +25,7 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo">YKPO Cafe</span>
+            <span class="logo"><a href="/home">YKPO Cafe</a></span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
                 <img class="user-img" src="/images/nigga.jpg" alt="">
@@ -175,8 +175,8 @@
                 <div class="image-container input-field-container">
                     <label>image</label>
                     <input type="file" name="product-image" class="product-name input-style" placeholder="Product Name"
-                        autocomplete="off" required /> 
-                        
+                        autocomplete="off" required />
+
                 </div>
 
                 <div class="buttons">
@@ -193,6 +193,7 @@
         <div class="three"></div>
     </div>
     <!-- end preloading -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-products.js"></script>
 </body>
 
