--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -25,7 +25,8 @@
     <div class="header">
         <div class="header-container">
             <i class="fa-solid fa-bars" id="menu-icon"></i>
-            <span class="logo">YKPO Cafe</span>
+            <span class="logo"><a href="/home">YKPO Cafe</a>
+            </span>
             <div class="right-header">
                 <div class="user-name">hey <span class="name">Admin</span></div>
                 <img class="user-img" src="/images/nigga.jpg" alt="">
