--- a/views/admin/reservation.html
+++ b/views/admin/reservation.html
@@ -53,7 +53,7 @@
             <input type="number" class="persons-number" placeholder="number of persons" min="1" required>
             <input type="date" class="reservation-date" name="reservation-date" required>
             <input type="time" class="reservation-time" required>
-            <input type="text" class="more-details" placeholder="more details">
+            <textarea type="text" class="more-details" placeholder="more details"></textarea>
             <input type="submit" class="send-button" value="book table">
         </form>
     </div>
