--- a/views/admin/customer.ejs
+++ b/views/admin/customer.ejs
@@ -61,33 +61,27 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td class="name">${name}</td>
-                        <td class="email">${email}</td>
-                        <td class="phone">${phone}</td>
-                        <td class="state">${state}</td>
-                        <td class="edit">edit</td>
-                    </tr>
+                    
                 </tbody>
             </table>
         </div>
     </div>
     <div class="page-details-container">
         <div class="details-page">
-            <form class="details-form" action="" method="none">
+            <form class="details-form" action="customer/update" enctype="multipart/form-data" method="post">
                 <div class="name-container input-field-container">
                     <i class="fa-solid fa-user"></i>
                     <input type="text" name="name" class="name input-style" placeholder="Name" autocomplete="off"
                         required />
                 </div>
                 <div class="username-container input-field-container">
-                    <i class="fa-solid fa-envelope"></i>
-                    <input type="email" name="email" class="email input-style" placeholder="Email" autocomplete="off"
+                    <i class="fa-solid fa-phone"></i>
+                    <input type="email" name="phone" class="phone input-style" placeholder="Phone Number 05xxxxxxxx" autocomplete="off"
                         required />
                 </div>
                 <div class="email-container input-field-container">
-                    <i class="fa-solid fa-phone"></i>
-                    <input type="text" name="phone" class="phone input-style" placeholder="Phone Number 05xxxxxxxx"
+                    <i class="fa-solid fa-envelope"></i>
+                    <input type="text" name="email" class="email input-style" placeholder="Email"
                         autocomplete="off" required />
                 </div>
                 <div class="status-container input-field-container">
