--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -47,7 +47,7 @@
                     class="fa-solid fa-arrow-right-from-bracket"></i></button>
         </div>
         <div class="content body">
-            <form action="/admin/profile/update" class="user-info output">
+            <form action="/admin/profile/update" class="user-info output" method="post">
                 <h1 class="profile-title">your profile</h1>
                 <div class="name-container part">
                     <label for="user-name">name :</label>
@@ -94,5 +94,4 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="/js/admin-profile.js"></script>
 </body>
-
 </html>
